--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -155,6 +155,29 @@ config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
  	frequency lookup tables and optimized scaling triggers instead of
  	% frequency steps to get smooth up/downscaling dependant on CPU load.
 
+config CPU_FREQ_DEFAULT_GOV_BARRY_ALLEN
+	bool "barry_allen"
+	select CPU_FREQ_GOV_BARRY_ALLEN
+	help
+	  Use the CPUFreq governor 'barry_allen' as default. This allows
+	  you to get a full dynamic cpu frequency capable system by simply
+	  loading your cpufreq low-level hardware driver, using the
+	  'barry_allen' governor for latency-sensitive workloads.
+
+config CPU_FREQ_DEFAULT_GOV_HYPER
+	bool "hyper"
+	select CPU_FREQ_GOV_HYPER
+	---help---
+	Use the CPUFreq governor 'hyper' as default. This allows
+	you to get a full dynamic cpu frequency capable system by simply
+	loading your cpufreq low-level hardware driver, using the
+	'hyper' governor for latency-sensitive workloads.
+
+config CPU_FREQ_DEFAULT_GOV_WAVE
+	bool "wave"
+	select CPU_FREQ_GOV_WAVE
+	help
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -307,6 +330,34 @@ config CPU_FREQ_GOV_ZZMOOVE
  	  'zzmoove' - based on cpufreq_conservative, using predefined
  	  frequency lookup tables and optimized scaling triggers instead of
  	  % frequency steps to get smooth up/downscaling dependant on CPU load.
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_BARRY_ALLEN
+	tristate "'barry_allen' cpufreq policy governor"
+	help
+	  'barry_allen' - This driver adds a dynamic cpufreq policy governor
+	  designed for latency-sensitive workloads.
+
+	  This governor attempts to reduce the latency of clock
+	  increases so that the system is more responsive to
+	  barry_allen workloads.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_barry_allen.
+
+	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_HYPER
+	tristate "'hyper' cpufreq governor"
+	depends on CPU_FREQ
+	---help---
+	'hyper' - A tweaked "ondemand" based smart and smooth optimized governor!
+	If in doubt, say N.
+
+config CPU_FREQ_GOV_WAVE
+	tristate "'wave' cpufreq governor"
  	  If in doubt, say N.
 
 config FINGERPRINT_BOOST
