adding faux sound control 3.6, thanks to authors

--- a/arch/arm64/configs/hardrock_oxygen_defconfig
+++ b/arch/arm64/configs/hardrock_oxygen_defconfig
@@ -4624,3 +4624,4 @@ CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_SOUND_CONTROL=y
