--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -581,6 +581,18 @@ config QPNP_MISC
 	  and the driver provides an API to check if this interrupt
 	  is available on the current PMIC chip.
 
+config AW87319
+	bool "AW87319 Ext. Speaker Amp."
+	default n
+	help
+	  Enables external speaker amp. If unsure say 'n'.
+
+config FORCE_FAST_CHARGE 
+	bool "Force faster charge rate for USB"
+	default n
+	help
+	  This allows users to override default charge rate for USB
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
