--- a/miui_oxygen_defconfig
+++ b/miui_oxygen_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.114 Kernel Configuration
+# Linux/arm64 3.18.113 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -34,15 +34,14 @@ CONFIG_PGTABLE_LEVELS=3
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
-CONFIG_SDFAT_USE_FOR_EXFAT=y
-CONFIG_SDFAT_USE_FOR_VFAT=y
+
 #
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Hardrock_kernel_rrfix_v9"
+CONFIG_LOCALVERSION="-Hardrock_kernel_rrv9beast"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -75,6 +74,9 @@ CONFIG_GENERIC_CLOCKEVENTS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_ARCH_HAS_TICK_BROADCAST=y
 CONFIG_GENERIC_CLOCKEVENTS_BROADCAST=y
+CONFIG_MODULES=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
 
 #
 # Timers subsystem
@@ -252,10 +254,7 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
+# CONFIG_MODULES is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_BLK_DEV_BSG=y
@@ -316,7 +315,6 @@ CONFIG_FREEZER=y
 # CONFIG_ARCH_VEXPRESS is not set
 # CONFIG_ARCH_XGENE is not set
 CONFIG_ARCH_MSM=y
-CONFIG_ARCH_MSM8916=y
 # CONFIG_ARCH_MSM8916 is not set
 # CONFIG_ARCH_MSM8917 is not set
 # CONFIG_ARCH_MSM8920 is not set
@@ -656,7 +654,7 @@ CONFIG_NETWORK_SECMARK=y
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_DEBUG is not set
 CONFIG_NETFILTER_ADVANCED=y
-CONFIG_BRIDGE_NETFILTER=m
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
@@ -1299,7 +1297,6 @@ CONFIG_SCSI_LOWLEVEL=y
 # CONFIG_SCSI_MPT2SAS is not set
 # CONFIG_SCSI_MPT3SAS is not set
 CONFIG_SCSI_UFSHCD=y
-CONFIG_SCSI_UFS_TEST=m
 # CONFIG_SCSI_UFSHCD_PCI is not set
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_QCOM=y
@@ -1642,7 +1639,7 @@ CONFIG_ATH_CARDS=y
 # CONFIG_ATH_DEBUG is not set
 # CONFIG_ATH5K_PCI is not set
 # CONFIG_ATH6KL is not set
-CONFIG_WIL6210=m
+CONFIG_WIL6210=y
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 # CONFIG_WIL6210_WRITE_IOCTL is not set
@@ -1685,7 +1682,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
+# CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
 CONFIG_INPUT_KEYCOMBO=y
 CONFIG_LAST_TOUCH_EVENTS=y
@@ -1954,7 +1951,7 @@ CONFIG_MSM_SMD_PKT=y
 # CONFIG_XILLYBUS is not set
 CONFIG_MSM_ADSPRPC=y
 # CONFIG_MSM_MDSP_TS is not set
-CONFIG_MSM_RDBG=m
+# CONFIG_MSM_RDBG is not set
 
 #
 # I2C support
@@ -2059,7 +2056,7 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPMI is not set
 # CONFIG_HSI is not set
@@ -2836,10 +2833,6 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
-CONFIG_BACKLIGHT_LCD_SUPPORT=y
-CONFIG_LCD_CLASS_DEVICE=m
-CONFIG_BACKLIGHT_CLASS_DEVICE=m
-CONFIG_BACKLIGHT_GENERIC=m
 # CONFIG_ADF is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_LOGO is not set
@@ -3419,8 +3412,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
-CONFIG_MMC_TEST=m
-CONFIG_MMC_BLOCK_TEST=m
+
 #
 # MMC/SD/SDIO Host Controller Drivers
 #
@@ -4073,6 +4065,7 @@ CONFIG_NTFS_FS=y
 CONFIG_NTFS_DEBUG=y
 CONFIG_NTFS_RW=y
 
+# CONFIG_NTFS_FS is not set
 
 #
 # Pseudo filesystems
@@ -4507,7 +4500,7 @@ CONFIG_CRYPTO_LZO=y
 #
 # Random Number Generation
 #
-CONFIG_CRYPTO_ANSI_CPRNG=m
+CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_DRBG_MENU is not set
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
@@ -4634,7 +4627,6 @@ CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
-#CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_POWERSUSPEND=y
