--- a/arch/arm64/configs/miui_oxygen_defconfig
+++ b/arch/arm64/configs/miui_oxygen_defconfig
@@ -42,7 +42,7 @@ CONFIG_SDFAT_USE_FOR_VFAT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Hardrock_kernel_miuifix_v9.1"
+CONFIG_LOCALVERSION="-Hardrock_kernel_miui_v14beast"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -562,6 +562,7 @@ CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
 CONFIG_CPU_FREQ_GOV_CULTIVATION=y
 CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
+CONFIG_CPU_FREQ_GOV_ELECTRON_ADVANCE=y
 
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPU_BOOST is not set
@@ -4621,6 +4622,7 @@ CONFIG_IOSCHED_FIFO=y
 CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_MAPLE=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_CFQ is not set
@@ -4642,3 +4644,8 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_POWERSUSPEND=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_BOEFFLA_WL_BLOCKER=y
