soc: msm: add sensor dsp framework support for anc

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -834,6 +834,13 @@ config SERIAL_NUM
 config STATE_NOTIFIER
         bool "State Notifier"
 
+config EXT_ANC
+	bool "Enable External ANC"
+	depends on MSM_QDSP6_APRV2 || MSM_QDSP6_APRV3
+	help
+	 This option enables support for anti-noise cnacellation
+	 on Sensor DSP.
+
 source "drivers/soc/qcom/memshare/Kconfig"
 
 endif # ARCH_MSM
