--- a/arch/arm64/configs/oxygen_user_defconfig
+++ b/arch/arm64/configs/oxygen_user_defconfig
@@ -40,7 +40,7 @@ CONFIG_MODULE_SIG_FORCE=y
 CONFIG_MODULE_SIG_SHA512=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_ARCH_MSM=y
-CONFIG_ARCH_MSM8916=y
+# CONFIG_ARCH_MSM8916 is not set
 CONFIG_ARCH_MSM8953=y
 CONFIG_PCI_MSM=y
 CONFIG_SMP=y
@@ -345,7 +345,6 @@ CONFIG_SOUNDWIRE=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
 CONFIG_SPI_SPIDEV=m
-CONFIG_PINCTRL_MSM8952=y
 CONFIG_PINCTRL_MSM8937=y
 CONFIG_PINCTRL_MSMCOBALT=y
 CONFIG_PINCTRL_MSM8940=y
