--- a/arch/arm64/configs/baka_defconfig
+++ b/arch/arm64/configs/baka_defconfig
@@ -500,6 +500,14 @@ CONFIG_ARM64_CPU_SUSPEND=y
 #
 # CPU Power Management
 #
+CONFIG_CPU_QUIET=y
+CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
+CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=y
+CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
+# CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
+CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
+CONFIG_CPU_QUIET_MSM=y
 
 #
 # CPU Idle
