--- a/drivers/staging/prima/Kbuild
+++ b/drivers/staging/prima/Kbuild
@@ -675,6 +675,11 @@ endif
 # Fix build for GCC 4.7
 EXTRA_CFLAGS += $(call cc-disable-warning,maybe-uninitialized,) -Wno-unused-function -Wno-unused-variable
 
+# Disable certain flags for Clang as they are spammy and I'm not fixing them :^)
+ifeq ($(cc-name),clang)
+EXTRA_CFLAGS += -Wno-enum-conversion
+endif 
+
 ifeq ($(CONFIG_WLAN_OFFLOAD_PACKETS),y)
 CDEFINES += -DWLAN_FEATURE_OFFLOAD_PACKETS
 endif
