--- a/drivers/staging/prima/Kbuild
+++ b/drivers/staging/prima/Kbuild
@@ -678,6 +678,8 @@ EXTRA_CFLAGS += $(call cc-disable-warning,maybe-uninitialized,) -Wno-unused-func
 # Disable certain flags for Clang as they are spammy and I'm not fixing them :^)
 ifeq ($(cc-name),clang)
 EXTRA_CFLAGS += -Wno-enum-conversion
+EXTRA_CFLAGS += -Wno-typedef-redefinition
+EXTRA_CFLAGS += -Wno-array-bounds
 endif 
 
 ifeq ($(CONFIG_WLAN_OFFLOAD_PACKETS),y)
