--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -146,6 +146,15 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE_PRO
 	help
 	  Use the CPUFreq governor 'interactive_pro' as default.
 
+config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
+        bool "zzmoove"
+ 	select CPU_FREQ_GOV_ZZMOOVE
+ 	select CPU_FREQ_GOV_PERFORMANCE
+ 	help
+ 	Use the CPUFreq governor 'zzmoove' as default, using predefined
+ 	frequency lookup tables and optimized scaling triggers instead of
+ 	% frequency steps to get smooth up/downscaling dependant on CPU load.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -290,6 +299,15 @@ config CPU_WAKE_BOOST
 	  is powered on, as reported by the framebuffer chain notifier. This helps
 	  make the display power on faster, as well as ensures good performance
 	  immediately after powering on the display.
+
+config CPU_FREQ_GOV_ZZMOOVE
+ 	tristate "'zzmoove' cpufreq governor"
+ 	depends on CPU_FREQ
+ 	help
+ 	  'zzmoove' - based on cpufreq_conservative, using predefined
+ 	  frequency lookup tables and optimized scaling triggers instead of
+ 	  % frequency steps to get smooth up/downscaling dependant on CPU load.
+ 	  If in doubt, say N.
 
 config FINGERPRINT_BOOST
 	bool "Fingerprint Boost"
