defconfig: enable interactive pro cpu governor

--- a/arch/arm64/configs/baka_defconfig
+++ b/arch/arm64/configs/baka_defconfig
@@ -536,6 +536,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_ELECTRON=y
 # CONFIG_CPU_FREQ_GOV_IMPULSE is not set
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
