--- a/arch/arm64/configs/baka_defconfig
+++ b/arch/arm64/configs/baka_defconfig
@@ -4101,6 +4101,7 @@ CONFIG_FUSE_FS=y
 #
 CONFIG_FAT_FS=y
 CONFIG_MSDOS_FS=y
+CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_SDFAT_FS=y
