--- a/arch/arm/boot/dts/qcom/msm8953.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953.dtsi
@@ -559,13 +559,15 @@
 		qcom,bcl-framework-interface;
 		qcom,bcl-freq-control-list = <&CPU0 &CPU1 &CPU2 &CPU3
 						&CPU4 &CPU5 &CPU6 &CPU7>;
+		qcom,bcl-hotplug-list = <&CPU6 &CPU7>;
+		qcom,bcl-soc-hotplug-list = <&CPU4 &CPU5 &CPU6 &CPU7>;
 		qcom,ibat-monitor {
 			qcom,low-threshold-uamp = <3400000>;
 			qcom,high-threshold-uamp = <4200000>;
 			qcom,mitigation-freq-khz = <1689600>;
 			qcom,vph-high-threshold-uv = <3500000>;
 			qcom,vph-low-threshold-uv = <3200000>;
-			qcom,soc-low-threshold = <5>;
+			qcom,soc-low-threshold = <10>;
 			qcom,thermal-handle = <&msm_thermal_freq>;
 		};
 	};
@@ -573,8 +575,8 @@
 	qcom,msm-core@a0000 {
 		compatible = "qcom,apss-core-ea";
 		reg = <0xa0000 0x1000>;
-		qcom,low-hyst-temp = <100>;
-		qcom,high-hyst-temp = <100>;
+		qcom,low-hyst-temp = <10>;
+		qcom,high-hyst-temp = <5>;
 
 		ea0: ea0 {
 			sensor = <&sensor_information9>;
@@ -884,20 +886,23 @@
 		clock-names = "xo_a";
 		qcom,num-clusters = <2>;
 
-                qcom,speed0-bin-v0-cl = <0x0 0x0>,
-					<0x26e8f000 0x1>,
-					<0x3dc01b00 0x2>,
-					<0x53819040 0x3>,
-					<0x64ac1840 0x4>,
-					<0x6b86db00 0x5>,
-					<0x74b4b580 0x6>,
-					<0x7829b800 0x7>,
-					<0x80266580 0x8>,
-					<0x839b6800 0x9>,
-					<0x89173700 0xa>,
-					<0x8c122780 0xb>,
-					<0x8f0d1800 0xc>;
-		qcom,speed0-bin-v0-cci = <0x0 0x0>,
+                 qcom,speed0-bin-v0-cl = <0x0 0x0>,
+                                        <0x192D5000 0x1>,					
+					<0x1DC13000 0x2>,
+                                        <0x22551000 0x3>,
+                                        <0x26e8f000 0x4>, 					
+                                        <0x3dc01b00 0x5>,
+                                        <0x53819040 0x6>,
+					<0x64ac1840 0x7>,
+                                       	<0x6b86db00 0x8>,
+					<0x74b4b580 0x9>,
+					<0x7829b800 0xa>,
+					<0x80266580 0xb>,
+					<0x839b6800 0xc>,
+					<0x89173700 0xd>,
+					<0x8c122780 0xe>,
+					<0x8f0d1800 0xf>;
+                 qcom,speed0-bin-v0-cci = <0x0 0x0>,
 					<0x9896800 0x1>,
 					<0xf906000 0x2>,
 					<0x1312d000 0x3>,
@@ -911,19 +916,22 @@
 					<0x36990d00 0xb>,
 					<0x37917340 0xc>;
 		qcom,speed2-bin-v0-cl = <0x0 0x0>,
-					<0x26e8f000 0x1>,
-					<0x3dc01b00 0x2>,
-					<0x53819040 0x3>,
-					<0x64ac1840 0x4>,
-					<0x6b86db00 0x5>,
-					<0x74b4b580 0x6>,
-					<0x7829b800 0x7>,
-					<0x80266580 0x8>,
-					<0x839b6800 0x9>,
-					<0x89173700 0xa>,
-					<0x8c122780 0xb>,
-					<0x8f0d1800 0xc>;
-		qcom,speed2-bin-v0-cci = <0x0 0x0>,
+                                         <0x192D5000 0x1>,
+                                        <0x1DC13000 0x2>,
+                                        <0x22551000 0x3>,
+                                        <0x26e8f000 0x4>,
+                                        <0x3dc01b00 0x5>,
+                                        <0x53819040 0x6>,
+                                        <0x64ac1840 0x7>,
+                                        <0x6b86db00 0x8>,
+                                        <0x74b4b580 0x9>,
+                                        <0x7829b800 0xa>,
+                                        <0x80266580 0xb>,
+                                        <0x839b6800 0xc>,
+                                        <0x89173700 0xd>,
+                                        <0x8c122780 0xe>,
+                                        <0x8f0d1800 0xf>;
+                qcom,speed2-bin-v0-cci = <0x0 0x0>,
 					<0x9896800 0x1>,
 					<0xf906000 0x2>,
 					<0x1312d000 0x3>,
@@ -937,19 +945,22 @@
 					<0x36990d00 0xb>,
 					<0x37917340 0xc>;
 		qcom,speed7-bin-v0-cl = <0x0 0x0>,
-					<0x26e8f000 0x1>,
-					<0x3dc01b00 0x2>,
-					<0x53819040 0x3>,
-					<0x64ac1840 0x4>,
-					<0x6b86db00 0x5>,
-					<0x74b4b580 0x6>,
-					<0x7829b800 0x7>,
-					<0x80266580 0x8>,
-					<0x839b6800 0x9>,
-					<0x89173700 0xa>,
-					<0x8c122780 0xb>,
-					<0x8f0d1800 0xc>;
-		qcom,speed7-bin-v0-cci =  <0x0 0x0>,
+                                          <0x192D5000 0x1>,
+                                        <0x1DC13000 0x2>,
+                                        <0x22551000 0x3>,
+                                        <0x26e8f000 0x4>,
+                                        <0x3dc01b00 0x5>,
+                                        <0x53819040 0x6>,
+                                        <0x64ac1840 0x7>,
+                                        <0x6b86db00 0x8>,
+                                        <0x74b4b580 0x9>,
+                                        <0x7829b800 0xa>,
+                                        <0x80266580 0xb>,
+                                        <0x839b6800 0xc>,
+                                        <0x89173700 0xd>,
+                                        <0x8c122780 0xe>,
+                                        <0x8f0d1800 0xf>;
+                qcom,speed7-bin-v0-cci =  <0x0 0x0>,
 					<0x9896800 0x1>,
 					<0xf906000 0x2>,
 					<0x1312d000 0x3>,
@@ -963,19 +974,22 @@
 					<0x36990d00 0xb>,
 					<0x37917340 0xc>;
 		qcom,speed6-bin-v0-cl = <0x0 0x0>,
-					<0x26e8f000 0x1>,
-					<0x3dc01b00 0x2>,
-					<0x53819040 0x3>,
-					<0x64ac1840 0x4>,
-					<0x6b86db00 0x5>,
-					<0x74b4b580 0x6>,
-					<0x7829b800 0x7>,
-					<0x80266580 0x8>,
-					<0x839b6800 0x9>,
-					<0x89173700 0xa>,
-					<0x8c122780 0xb>,
-					<0x8f0d1800 0xc>;
-		qcom,speed6-bin-v0-cci =  <0x0 0x0>,
+                                         <0x192D5000 0x1>,
+                                        <0x1DC13000 0x2>,
+                                        <0x22551000 0x3>,
+                                        <0x26e8f000 0x4>,
+                                        <0x3dc01b00 0x5>,
+                                        <0x53819040 0x6>,
+                                        <0x64ac1840 0x7>,
+                                        <0x6b86db00 0x8>,
+                                        <0x74b4b580 0x9>,
+                                        <0x7829b800 0xa>,
+                                        <0x80266580 0xb>,
+                                        <0x839b6800 0xc>,
+                                        <0x89173700 0xd>,
+                                        <0x8c122780 0xe>,
+                                        <0x8f0d1800 0xf>;
+                qcom,speed6-bin-v0-cci =  <0x0 0x0>,
 					<0x9896800 0x1>,
 					<0xf906000 0x2>,
 					<0x1312d000 0x3>,
@@ -988,6 +1002,9 @@
 					<0x34a182c0 0xa>,
 					<0x36990d00 0xb>,
 					<0x37917340 0xc>;
+
+
+
 
 		#clock-cells = <1>;
 	};
@@ -1010,9 +1027,8 @@
 			 <&clock_cpu clk_a53_pwr_clk>,
 			 <&clock_cpu clk_a53_pwr_clk>,
 			 <&clock_cpu clk_a53_pwr_clk>;
-
-qcom,cpufreq-table = <0x9f600  0xfd200 0x1560a8 0x19c5a8 0x1b86e0 0x1de070 0x1ec300 0x20ce70 0x21b100 0x231860 0x23dbb0 0x249f00 >;
-	};
+                qcom,cpufreq-table = < 0x67200 0x79E00 0x8CA00 0x9f600 0xfd200 0x1560a8  0x19c5a8 0x1b86e0 0x1de070 0x1ec300 0x20ce70 0x21b100 0x231860 0x23dbb0 0x249f00 >;
+         };
 
 	cpubw: qcom,cpubw {
 		compatible = "qcom,devbw";
@@ -1064,13 +1080,12 @@ qcom,cpufreq-table = <0x9f600  0xfd200 0x1560a8 0x19c5a8 0x1b86e0 0x1de070 0x1ec
 	devfreq-cpufreq {
 		cpubw-cpufreq {
 		target-dev = <&cpubw>;
-
-        cpu-to-dev-map = <0x9f600 0x64b 0xfd200 0xc95 0x156300 0x16e3 0x19c5a8 0x192d 0x1b8a00 0x1bc0 0x1de200 0x1bc0 0x1ec300 0x1bc0 0x21b100 0x1bc0 0x231860 0x1bc0 0x23dbb0 0x1bc0 0x249f00 0x1bc0  >;
-		};
+                cpu-to-dev-map = < 0x67200 0x64b 0x79E00 0xc95 0x8CA00 0xc95 0x9f600 0xc95 0xfd200 0xc95 0x1560a8 0x192d 0x19c5a8 0x192d 0x1b8a00 0x1bc0 0x1de200 0x1bc0 0x1ec300 0x1bc0 0x21b100 0x1bc0 0x231860 0x1bc0 0x23dbb0 0x1bc0 0x249f00 0x1bc0  >;
+                 };
 		mincpubw-cpufreq {
 			target-dev = <&mincpubw>;
-       cpu-to-dev-map = <0x9f600 0x64b 0x156300 0x16e3 0x249f00 0x1bc0>;
-		};
+                        cpu-to-dev-map = <0x67200 0x64b 0x19c5a8 0x192d 0x249f00 0x1bc0>;
+                };
 	};
 
 	rpm_bus: qcom,rpm-smd {
