--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -55,8 +55,8 @@ obj-$(CONFIG_SRAM)		+= sram.o
 obj-y				+= mic/
 obj-$(CONFIG_GENWQE)		+= genwqe/
 obj-$(CONFIG_QSEECOM) += qseecom.o
-obj-$(CONFIG_PROFILER) += profiler.o
-obj-$(CONFIG_H_QSEECOM) += hdcp.o
+#obj-$(CONFIG_PROFILER) += profiler.o
+#obj-$(CONFIG_H_QSEECOM) += hdcp.o
 ifdef CONFIG_COMPAT
 obj-$(CONFIG_QSEECOM) += compat_qseecom.o
 endif
@@ -70,9 +70,4 @@ obj-$(CONFIG_USB_EXT_TYPE_C_PERICOM)	+= type-c-pericom.o
 obj-$(CONFIG_USB_EXT_TYPE_C_TI)		+= type-c-ti.o
 obj-$(CONFIG_TYPEC_DRIVER)		+= type-c/
 obj-$(CONFIG_QPNP_MISC) 	+= qpnp-misc.o
-obj-$(CONFIG_UID_SYS_STATS) += uid_sys_stats.o
-obj-$(CONFIG_MEMORY_STATE_TIME) += memory_state_time.o
-obj-$(CONFIG_APDS9930)		+= apds993x.o
-obj-$(CONFIG_UID_SYS_STATS) += uid_sys_stats.o
-obj-$(CONFIG_MEMORY_STATE_TIME) += memory_state_time.o
 obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
