fixed EXfat filesystem support

--- a/arch/arm64/configs/hardrock_oxygen_defconfig
+++ b/arch/arm64/configs/hardrock_oxygen_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Hardrock_kernelv15beast"
+CONFIG_LOCALVERSION="-Hardrock_kernelv15.1beast"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -561,6 +561,13 @@ CONFIG_CPU_FREQ_GOV_ELECTRON_ADVANCE=y
 CONFIG_CPU_FREQ_GOV_IRONACTIVE=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPU_BOOST is not set
 
