adding few more governors as well as optimizations

--- a/arch/arm64/configs/hardrock_oxygen_defconfig
+++ b/arch/arm64/configs/hardrock_oxygen_defconfig
@@ -554,6 +554,9 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 CONFIG_CPU_FREQ_GOV_LIONHEARTH=y
 CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_CULTIVATION=y
+CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPU_BOOST is not set
 
