--- a/arch/arm64/configs/miui_oxygen_defconfig
+++ b/arch/arm64/configs/miui_oxygen_defconfig
@@ -42,7 +42,7 @@ CONFIG_SDFAT_USE_FOR_VFAT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Hardrock_kernel_rrfix_v9"
+CONFIG_LOCALVERSION="-Hardrock_kernel_miuifix_v9.1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -559,6 +559,10 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 CONFIG_CPU_FREQ_GOV_LIONHEARTH=y
 CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_CULTIVATION=y
+CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
+
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPU_BOOST is not set
 
