--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -298,6 +298,26 @@ config CPU_FREQ_DEFAULT_GOV_NIGHTMARE
 	select CPU_FREQ_GOV_NIGHTMARE
 	help
 
+config CPU_FREQ_DEFAULT_GOV_CULTIVATION
+	bool "cultivation"
+	select CPU_FREQ_GOV_CULTIVATION
+	help
+	Use the CPUFreq governor 'cultivation' as default.
+
+
+config CPU_FREQ_DEFAULT_GOV_DYNAMIC_INTERACTIVE
+        bool "dynamic_interactive"
+        select CPU_FREQ_GOV_DYNAMIC_INTERACTIVE
+        help
+
+        Use the CPUFreq governor 'dynamic_interactive' as default.
+
+config CPU_FREQ_DEFAULT_GOV_SMARTMAX_EPS
+        bool "smartmax_eps"
+        select CPU_FREQ_GOV_SMARTMAX_EPS
+        help
+        Use the CPUFreq governor 'smartmax_eps' as default. 
+
 
 endchoice
 
@@ -639,6 +659,24 @@ config CPU_FREQ_GOV_WAVE
         depends on CPU_FREQ
         ---help---
  	  If in doubt, say N.
+
+config CPU_FREQ_GOV_CULTIVATION
+	tristate "'cultivation' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'cultivation' - another tuned interactive with extra options
+
+config CPU_FREQ_GOV_SMARTMAX_EPS
+        tristate "'smartmax_eps' cpufreq governor"
+        depends on CPU_FREQ
+        help
+          'smartmax_eps' - another tuned smartmax with extra options
+
+config CPU_FREQ_GOV_DYNAMIC_INTERACTIVE
+        tristate "'dynamic_interactive' cpufreq governor"
+        depends on CPU_FREQ
+        help
+          'dynamic_interactive' - another tuned interactive with extra options
 
 config FINGERPRINT_BOOST
 	bool "Fingerprint Boost"
