frustrated with gpu voltages and reverted to orignal frequencies with max 1300

--- a/arch/arm/boot/dts/qcom/msm8953-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-gpu.dtsi
@@ -161,7 +161,7 @@
 			/* NOM+ */
 			qcom,gpu-pwrlevel@1 {
 				reg = <1>;
-				qcom,gpu-freq = <0x47868C00>;
+				qcom,gpu-freq = <0x2c0c3ec0>;
 				qcom,bus-freq = <10>;
 				qcom,bus-min = <0x9>;
 				qcom,bus-max = <10>;
@@ -170,7 +170,7 @@
 			/* NOM */
 			qcom,gpu-pwrlevel@2 {
 				reg = <2>;
-				qcom,gpu-freq = <0x4190AB00>;
+				qcom,gpu-freq = <0x28a67e80>;
 				qcom,bus-freq = <0xa>;
 				qcom,bus-min = <0x8>;
 				qcom,bus-max = <10>;
@@ -179,7 +179,7 @@
 			/* SVS+ */
 			qcom,gpu-pwrlevel@3 {
 				reg = <3>;
-				qcom,gpu-freq = <0x35A4E900>;
+				qcom,gpu-freq = <0x2160ec00>;
 				qcom,bus-freq = <0x9>;
 				qcom,bus-min = <0x6>;
 				qcom,bus-max = <0xa>;
@@ -188,7 +188,7 @@
 			/* SVS */
 			qcom,gpu-pwrlevel@4 {
 				reg = <4>;
-				qcom,gpu-freq = <0x29B92700>;
+				qcom,gpu-freq = <0x1b1ebfc0>;
 				qcom,bus-freq = <0x8>;
 				qcom,bus-min = <0x5>;
 				qcom,bus-max = <0x9>;
@@ -197,7 +197,7 @@
 		       /* Low SVS */
 			qcom,gpu-pwrlevel@5 {
 				reg = <5>;
-				qcom,gpu-freq = <0x1DCD6500>;
+				qcom,gpu-freq = <0x1312d000>;
 				qcom,bus-freq = <0x7>;
 				qcom,bus-min = <0x4>;
 				qcom,bus-max = <0x8>;
@@ -208,13 +208,13 @@
 				qcom,bus-freq = <0x5>;
 				qcom,bus-max = <0x6>;
 				qcom,bus-min = <0x2>;
-				qcom,gpu-freq = <0x11E1A300>;
+				qcom,gpu-freq = <0xcdfe600>;
 				reg = <0x6>;
 			};
 
 			qcom,gpu-pwrlevel@7 {
 				reg = <0x7>;
-				qcom,gpu-freq = <0x5F5E100>;
+				qcom,gpu-freq = <0x7ed6b40>;
 				qcom,bus-freq = <0x2>;
 				qcom,bus-min = <0x1>;
 				qcom,bus-max = <0x4>;
