Final changes added for upgrading kernel to 3.18.122

--- a/arch/arm64/configs/miui_oxygen_defconfig
+++ b/arch/arm64/configs/miui_oxygen_defconfig
@@ -42,7 +42,7 @@ CONFIG_SDFAT_USE_FOR_VFAT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Hardrock_kernel_miui_v16beast"
+CONFIG_LOCALVERSION="-Hardrock_kernel_miui_v17beast"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -568,6 +568,12 @@ CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DISCARD=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+#CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_EXFAT_DELAYED_SYNC is not set
 # CONFIG_EXFAT_KERNEL_DEBUG is not set
 # CONFIG_EXFAT_DEBUG_MSG is not set
