--- a/arch/arm64/configs/hardrock_oxygen_defconfig
+++ b/arch/arm64/configs/hardrock_oxygen_defconfig
@@ -41,8 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Hardrock_kernelv16beast"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-Hardrock_kernelv17"
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -563,6 +562,12 @@ CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DISCARD=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+#CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_EXFAT_DELAYED_SYNC is not set
 # CONFIG_EXFAT_KERNEL_DEBUG is not set
 # CONFIG_EXFAT_DEBUG_MSG is not set
