--- a/drivers/cpufreq/Makefile
+++ b/drivers/cpufreq/Makefile
@@ -47,6 +47,7 @@ obj-$(CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE)      += cpufreq_dynamic_interacti
 obj-$(CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS)      += cpufreq_smartmax_eps.o
 #obj-$(CONFIG_CPU_FREQ_GOV_RAGINGMOLASSES)      += cpufreq_ragingmolasses.o
 obj-$(CONFIG_CPU_FREQ_GOV_CULTIVATION)   += cpufreq_cultivation.o
+obj-$(CONFIG_CPU_FREQ_GOV_ONDEMANDX)	+= cpufreq_ondemandx.o
 obj-$(CONFIG_CPU_BOOST)			+= cpu-boost.o
 obj-$(CONFIG_FINGERPRINT_BOOST)		+= fp-boost.o
 
